# learning

./: .gitignore  .gitmodules  README.md
C++/linux-debugger/: meson.build
C++/linux-debugger/include/: breakpoint.hpp  debugger.hpp  strings.hpp
C++/linux-debugger/src/: breakpoint.cpp  debugger.cpp  main.cpp  print_to_stderr.cpp  strings.cpp
C/buffer-overflow/: README.md  invulnerable.c  meson.build  vulnerable.c
Haskell/tutorial/advanced/: LocalDeclarations.hs  PointFree.hs
Haskell/tutorial/io/: Actions.hs  FileRead.hs  ReadWrite.hs  test.txt
Haskell/tutorial/type-basics/: BinaryTree.hs  CPS.hs  EnumSets.hs  Types.hs
JavaScript/mern-stack/: .gitignore
JavaScript/mern-stack/api/: .eslintrc  about.js  api_handler.js  db.js  graphql_date.js  issue.js  package-lock.json  package.json  schema.graphql  server.js
JavaScript/mern-stack/api/scripts/: init.mongo.js  trymongo.js
JavaScript/mern-stack/ui/: .eslintrc  package-lock.json  package.json  uiserver.js  webpack.config.js
JavaScript/mern-stack/ui/public/: IssueAdd.js  IssueFilter.js  IssueList.js  IssueTable.js  app.bundle.js  graphQLFetch.js  index.html  vendor.bundle.js
JavaScript/mern-stack/ui/src/: App.jsx  Contents.jsx  DateInput.jsx  IssueAdd.jsx  IssueDetail.jsx  IssueEdit.jsx  IssueFilter.jsx  IssueList.jsx  IssueTable.jsx  NumInput.jsx  TextInput.jsx  graphQLFetch.js
Python/asyncexp/: pyproject.toml
Python/asyncexp/src/asyncexp/: __init__.py  asyncexp.tcss  widgets.py
Python/examples/metaclasses/: descriptive-meta.ipynb  descriptive-meta.md
Python/experiments/rel_path_test/: main.py
Python/experiments/templating/: template.rst
Python/experiments/typexps/: .coveragerc  .project_alt.json  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  setup.cfg  setup.py  tox.ini
Python/experiments/typexps/docs/: conf.py  index.rst
Python/experiments/typexps/tests/: conftest.py  test_types.py
Python/manim/: .gitignore
Python/manim/quickstart/: scene.py
Python/pytorch/: .gitignore
Python/pytorch/tutorial/gym/: .pylintrc  pytorch-gym-cache.yaml  (+1 more)
Python/tabulator/: example.txt  meson.build  pyproject.toml
Python/tabulator/src/tabulator/: __init__.py  cli.py  exceptions.py  execptions.py  note_fragment.py  note_graph.py  notes.py  tab_graph.py
Python/tabulator/src/tabulator/notes/: __init__.py  note.py  note_graph.py  note_sequence.py  pitch.py
Python/tabulator/src/tabulator/tabulature/: __init__.py  tab_graph.py
Python/tabulator/tests/: test_note_fragment.py  test_note_graph.py  test_notes.py  test_tab_graph.py
Python/tabulator/tests/unit_tests/test_notes/: test_note_graph.py  test_note_sequence.py  test_pitch.py
Python/tabulator/tests/unit_tests/test_tabulature/: test_tab_graph.py
Python/tryhatch/: .project
Python/tryhatch/digup-hatchet/: README.md  pyproject.toml  ruff_defaults.toml
Python/wagtail/tryout/: .project
Rust/ballsim/: Cargo.toml
Rust/ballsim/src/: main.rs
(+36 files in other folders)
