[project]
name = "asyncexp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DropD", email = "rico.haeuselmann@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "textual>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
asyncexp = "asyncexp:main"
