[project]
name = "tabulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
tabulator = "tabulator.cli:main"

[tool.hatch.build]
packages = ["src/tabulator"]
