[project]
name = "tabulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click"
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
interact = [
    "ipython"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
tabulator = "tabulator.cli:main"

[tool.hatch.build]
packages = ["src/tabulator"]

[tool.hatch.envs.type]
dependencies = ["mypy", "pytest"]

[tool.hatch.envs.type.scripts]
check = "mypy --install-types src tests"
